--- a/style.css
+++ b/style.css
@@ -3,4 +3,21 @@ div {
   width: 65px;
   height: 65px;
   background-clip: content-box;
+  border: 1px solid;
+  margin: 15px 25px;
+}
+.box1 {
+  padding: 8px;
+}
+.box2 {
+  padding: 30px 65px;
+  margin-top: 32px;
+}
+.box3 {
+  padding: 15px 12px 30px 12px;
+  margin-top: 35px;
+}
+.box4 {
+  padding: 10px 130px 30px 200px;
+  margin-top: 35px;
 }
